--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-variants": "^0.1.18"
   },
   "devDependencies": {
     "@types/node": "^20",
