--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@nextui-org/switch": "^2.0.25",
     "@react-aria/visually-hidden": "^3.8.7",
     "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.5",
