--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/switch": "^2.0.25",
+    "@react-aria/ssr": "^3.9.0",
     "@react-aria/visually-hidden": "^3.8.7",
     "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.5",
