--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-aria/ssr": "^3.9.0",
     "@react-aria/visually-hidden": "^3.8.7",
     "@vercel/analytics": "^1.1.1",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
