--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/switch": "^2.0.25",
     "@react-aria/ssr": "^3.9.0",
@@ -17,10 +18,13 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
+    "next-auth": "5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-variants": "^0.1.18"
+    "react-hook-form": "^7.48.2",
+    "tailwind-variants": "^0.1.18",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
