--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/analytics": "^1.1.1",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.3",
     "next-auth": "5.0.0-beta.4",
     "next-themes": "^0.2.1",
@@ -27,6 +28,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
